Complete proofreading of ex. 27

--- a/exercises/latex/05_c/problems/mcAccelerometer.tex
+++ b/exercises/latex/05_c/problems/mcAccelerometer.tex
@@ -12,8 +12,8 @@ In dieser Aufgabe wirst du mithilfe des Beschleunigungssensors eine digitale Was
 %
 \begin{figure}[!htb]
 	\centering
-	\includegraphics[width=0.4\textwidth]{./05_c/figures/kxcjk1013.jpg}
-	\caption{Der Beschleunigungssensor des FM4-Boards}
+	\includegraphics[width=0.4\textwidth]{./05_c/figures/kxcjk1013.png}
+	\caption{Der Beschleunigungssensor des FM4-Boards (rot umrandet)}
 	\label{fig:accelerometer}
 \end{figure} 
 
@@ -32,7 +32,7 @@ Gehe nun wie folgt vor:
 	\cpppInputListing{05_c/listings/accelerometerLCDFormat.c}
 %	
 	\hints{
-		\item Verwende zur Ausgabe von Variablen des Typs \lstinline|float| auf den Display die Funktion \lstinline|writeFloat(float, uint8_t, uint8_t)| (im Header \filename{gfx.h}).
+		\item Verwende zur Ausgabe von Variablen des Typs \lstinline|float| auf den Display die Funktion \lstinline|writeFloat| (im Header \filename{gfx.h}).
 	}
 %
 	\item
