16bit number question and cppp_ prefix

--- a/exercises/latex/05_c/problems/mcTouchScreen.tex
+++ b/exercises/latex/05_c/problems/mcTouchScreen.tex
@@ -44,7 +44,7 @@ Die Spannungen zwischen X+ und dem Druckpunkt sowie dem Druckpunkt und X- lassen
 Diese Information wird vom Microcontroller ausgelesen, der die gemessene Spannung in Relation zur Auflösung des Displays setzt.
 Die Y-Koordinate wird gemessen, indem Y+ und Y- an eine Gleichspannung gelegt und die Spannungen an X+ und X- ausgelesen werden.
 
-Für dein Projekt stellen wir dir die Funktionen \lstinline|readTouchX()|, \lstinline|readTouchY()| und \lstinline|readTouchZ()| zur Verfügung, die X-, Y- und Z-Werte eines Druckpunkts auf dem Touchscreen auslesen können (\filename{analog.h}).
+Für dein Projekt stellen wir dir die Funktionen \lstinline|cppp_readTouchX()|, \lstinline|cppp_readTouchY()| und \lstinline|cppp_readTouchZ()| zur Verfügung, die X-, Y- und Z-Werte eines Druckpunkts auf dem Touchscreen auslesen können (\filename{analog.h}).
 Ist der Z-Wert größer als ein bestimmter Grenzwert, kann von einer Berührung des Touchscreens ausgegangen werden. 
 
 
