--- a/exercises/latex/01_basics/problems/basics.tex
+++ b/exercises/latex/01_basics/problems/basics.tex
@@ -109,7 +109,7 @@ Fertig -- die Ausgabe des Programms sollte sich nicht verändert haben.
 
 \subsection{Dokumentation \optional} \label{basics:doc}
 
-\optionaltextbox
+\optionaltextboxCPP
 
 Für die Lesbarkeit eines Programms ist eine ausführliche Dokumentation des Programmcodes essentiell.
 Dazu wirst du in dieser Aufgabe den Header \filename{functions.hpp} mit Kommentaren versehen, die das Tool \emph{Doxygen}\footnote{Doxygen-Projektseite: \url{http://www.doxygen.nl/}} interpretieren kann.
