--- a/exercises/latex/02_memory/problems/debugging.tex
+++ b/exercises/latex/02_memory/problems/debugging.tex
@@ -1,6 +1,6 @@
 % !TeX spellcheck = de_DE
 \section{\ExercisePrefixMemory Debugging \optional}\label{sec:debugging}
-\optionaltextbox
+\optionaltextboxCPP
 
 Die meisten Entwicklungsgebungen bieten Debuggingfunktionalität.
 Debugging ermöglicht es schrittweise die Ausführung des Codes zu beobachten und lokale Variablen zu inspizieren und auf ihren aktuellen Wert zu prüfen. Oftmals ist diese Vorgehensweise gut geeignet kleinere Fehler in der Programmlogik zu finden.
