--- a/exercises/latex/04_advanced/problems/makefiles.tex
+++ b/exercises/latex/04_advanced/problems/makefiles.tex
@@ -1,6 +1,6 @@
 \section{\ExercisePrefixElevator Makefiles \optional}
 
-\optionaltextbox
+\optionaltextboxCPP
 
 \cpppSolutionName{makefiles}{makefiles}
 
