--- a/exercises/latex/04_advanced/problems/methodPointers.tex
+++ b/exercises/latex/04_advanced/problems/methodPointers.tex
@@ -1,5 +1,5 @@
 \subsection{\ExercisePrefixAdvanced Methodenzeiger \optional}
-\optionaltextbox
+\optionaltextboxCPP
 \cpppSolutionName{functional_programming}{functional\_ programming}
 \label{sec:functional_method}
 Es gibt auch die Möglichkeit, Methoden\footnote{Hier ist eine einfache Erklärung zu dem Unterschied von Funktion und Methode zu finden \url{http://stackoverflow.com/a/155655}} via Zeiger auszuführen (sogenannte \textbf{Methodenzeiger}).
