--- a/exercises/latex/04_advanced/problems/unitTests.tex
+++ b/exercises/latex/04_advanced/problems/unitTests.tex
@@ -1,6 +1,6 @@
 % !TeX spellcheck = de_DE
 \section{\ExercisePrefixAdvanced UnitTest++ \optional}\label{sec:unit_test}
-\optionaltextbox
+\optionaltextboxCPP
 \cpppSolutionName{generic_linked_list_tests}{generic\_linked\_list\_tests}
 
 Bisher hast du vermutlich durch \enquote{scharfes Draufschauen} und Debuggen sichergestellt, dass deine Implementierungen richtig funktionieren.
