--- a/exercises/latex/05_c/problems/cIntro.tex
+++ b/exercises/latex/05_c/problems/cIntro.tex
@@ -263,7 +263,7 @@ Welche Ergebnisse sind demnach erlaubt?
 
 \subsection{Structs und Unions \optional}
 
-\optionaltextbox
+\optionaltextboxC
 \cpppInputListing{05_c/problems/listings/channels_struct.c}
 \cpppSolutionName{microcontroller_c_basics/Unions}{micro\-con\-troller\_c\_bas\-ics/7\_Unions}
 In diesem Aufgabenteil sehen wir uns an, wie sich die Datentypen \lstinline|struct| und \lstinline|union| kombinieren lassen, um zwei Perspektiven auf ein Farbojekt einzunehmen: einmal kanalweise und einmal als gesamter 32-Bit-Farbwert.
@@ -301,7 +301,7 @@ Die Darstellung des Speichers in Abbildung \ref{fig:color_channels} sollte dir w
 
 \subsection{C++-Aufgaben nachprogrammieren \optional}
 
-\optionaltextbox
+\optionaltextboxC
 
 Dies ist eine freie Aufgabe, in der du versuchst, Programme der vergangenen Tage in reinem C auszudrücken.
 Der Schwierigkeitsgrad ist dabei sehr unterschiedlich!
