--- a/exercises/latex/05_c/problems/mcDisplay.tex
+++ b/exercises/latex/05_c/problems/mcDisplay.tex
@@ -1,6 +1,6 @@
 \section{\ExercisePrefixEmbeddedC Display ansteuern \optional}
 
-\optionaltextbox
+\optionaltextboxC
 
 In diesem Abschnitt lernst du die Ansteuerung des Displays kennen.
 Das Display hat eine Auflösung von 480 * 320 Pixeln.
