--- a/exercises/latex/05_c/problems/mcIntro.tex
+++ b/exercises/latex/05_c/problems/mcIntro.tex
@@ -1,6 +1,7 @@
+% !TeX spellcheck = de_DE
 \section{\ExercisePrefixEmbeddedC Testprogramm auf den Microcontroller laden \optional}
 
-\optionaltextbox
+\optionaltextboxC
 
 Alle nun folgenden, mit \ExercisePrefixEmbeddedC markierten Aufgaben sind nicht klausurrelevant.
 Sie dienen dazu, dich in die Welt der Embedded-C-Programmierung einzuführen.
