--- a/exercises/latex/05_c/problems/mcJoysticks.tex
+++ b/exercises/latex/05_c/problems/mcJoysticks.tex
@@ -1,6 +1,8 @@
+% !TeX spellcheck = de_DE
+\clearpage
 \section{\ExercisePrefixEmbeddedC Joysticks abfragen \optional}
 
-\optionaltextbox
+\optionaltextboxC
 
 In diesem Abschnitt nutzen wir die Funktionen der vorigen Aufgabe, um die analogen Werte der Joysticks auszugeben. Darauf aufbauend entwickelst du eine Aufgabe, die mithilfe des Joysticks die Farbe der RGB-LED verändert.
 Die zu implementierenden Funktionen befinden sich in der Datei \filename{joystick.c}.
