--- a/exercises/latex/05_c/problems/mcAccelerometer.tex
+++ b/exercises/latex/05_c/problems/mcAccelerometer.tex
@@ -1,7 +1,8 @@
 % !TeX spellcheck = de_DE
+\clearpage
 \section{\ExercisePrefixEmbeddedC Beschleunigungssensor \optional}
 
-\optionaltextbox
+\optionaltextboxC
 
 Auf dem Evaluationsboard ist ein Beschleunigungssensor integriert, den du verwenden kannst um die Orientierung des Entwicklungsboards auszulesen.
 Der Beschleunigungssensor wird von einem eigenen Microcontroller ausgelesen.
@@ -32,7 +33,7 @@ Gehe nun wie folgt vor:
 	\cpppInputListing{05_c/listings/accelerometerLCDFormat.c}
 %	
 	\hints{
-		\item Verwende zur Ausgabe von Variablen des Typs \lstinline|float| auf den Display die Funktion \lstinline|writeFloat| (im Header \filename{gfx.h}).
+		\item Verwende zur Ausgabe von Variablen des Typs \lstinline|float| auf den Display die Funktion \lstinline|cppp_writeFloat| (im Header \filename{gfx.h}).
 	}
 %
 	\item
