--- a/exercises/latex/05_c/problems/mcButton.tex
+++ b/exercises/latex/05_c/problems/mcButton.tex
@@ -1,6 +1,6 @@
 \section{\ExercisePrefixEmbeddedC Taster abfragen \optional}
 
-\optionaltextbox
+\optionaltextboxC
 
 In dieser Aufgabe erweiterst du die vorherige Aufgabe um eine Benutzerinteraktion über den Taster des linken Joysticks (\textbf{Joystick 1}).
 Ziel dieser Aufgabe ist es, mithilfe des Tasters die RGB-LED in zwei verschiedenen Szenarien zu kontrollieren.
