--- a/exercises/latex/05_c/problems/mcGame.tex
+++ b/exercises/latex/05_c/problems/mcGame.tex
@@ -1,6 +1,8 @@
+% !TeX spellcheck = de_DE
+\clearpage
 \section{\ExercisePrefixEmbeddedC Eigenes Microcontroller-Projekt umsetzen \optional}
 
-\optionaltextbox
+\optionaltextboxC
 
 Nachdem du einige der Ein- und Ausgabemöglichkeiten des Boards kennengelernt hast, besteht deine Aufgabe in diesem Teil darin, ein kleines Projekt deiner Wahl umzusetzen.
 Du hast hierbei die freie Wahl, die folgenden Vorschläge sollen nur als Anregung dienen.
