--- a/exercises/latex/06_elevator/problems/sim2.tex
+++ b/exercises/latex/06_elevator/problems/sim2.tex
@@ -1,3 +1,4 @@
+% !TeX spellcheck = de_DE
 \section{\ExercisePrefixElevator Aufzugsimulator -- Teil 2: Speicherverwaltung \optional}
 
 \optionaltextbox
@@ -96,8 +97,7 @@ Entweder du dereferenzierst das Element doppelt und verwendest den Operator \lst
 Schau dir die Ausgabe an.
 Nun werden Personen nicht mehr kopiert, sondern nur noch gelöscht, sobald sie tatsächlich den Aufzug verlassen haben und kein Zeiger mehr auf sie zeigt.
 
-\subsection{Vergleich der alten und neuen Implementation \optional}
-\optionaltextbox
+\subsection{Vergleich der alten und neuen Implementation}
 
 Es ist natürlich interessant zu erfahren, ob sich der ganze Aufwand des Refactorings gelohnt hat.
 
