--- a/exercises/latex/02_memory/problems/pointers.tex
+++ b/exercises/latex/02_memory/problems/pointers.tex
@@ -63,7 +63,7 @@ Hast du diese Ausgabe erwartet?
 
 In dieser Aufgabe setzt du dich mit der Bedeutung des Schlüsselworts \lstinline{const} im Kontext von Pointern auseinander.
 
-Versuche für jede der Variablen im folgenden Code je eine \emph{Verwendung} zu finden, die  
+Die unten aufgeführten Beispiele sind korrekt, versuche für jede der Variablen im folgenden Code je eine \emph{Verwendung} zu finden, die  
 \begin{itemize}
 \item gültig ist (= fehlerfrei kompiliert) und
 \item nicht gültig ist (= einen Compiler-Fehler wirft).
