Added new Task WSN to latex

--- a/exercises/latex/cppp_exercises.tex
+++ b/exercises/latex/cppp_exercises.tex
@@ -104,6 +104,7 @@ Zu Beginn jedes Themengebiets der Vortragsfolien ist vermerkt, welche Aufgaben z
 \input{05_c/problems/mcDHT11}
 \input{05_c/problems/mcAccelerometer}
 \input{05_c/problems/mcABLE}
+\input{05_c/problems/mcSensorWAN}
 
 
 \newpage
