Made latex project for the exercises modular

--- a/exercises/latex/00_common/common_head.tex
+++ b/exercises/latex/00_common/common_head.tex
@@ -163,7 +163,8 @@ Diese Aufgabe dient der Vertiefung deines Wissens in C und ist nicht notwendig, 
 
 \newcommand{\cclicense}{
 \begin{center}
-    \fbox{
+	\begin{figure}[b]
+	\fbox{
         \parbox{0.96\textwidth}
         {
             \begin{minipage}{0.15\textwidth}
@@ -179,6 +180,7 @@ Diese Aufgabe dient der Vertiefung deines Wissens in C und ist nicht notwendig, 
             \end{minipage}
         }
     }
+    \end{figure}
 \end{center}
 }
 
