Added new chapter to fitting subfile and build all pdfs

--- a/exercises/latex/cppp_exercise_c.tex
+++ b/exercises/latex/cppp_exercise_c.tex
@@ -35,6 +35,7 @@
 \input{05_c/problems/mcDHT11}
 \input{05_c/problems/mcAccelerometer}
 \input{05_c/problems/mcABLE}
+\input{05_c/problems/mcSensorWAN}
 
 \cclicense
 
